<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewRadioGroupSub1Heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal
"       android:gravity="center_horizontal"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/text_RadioGroupSub1Heading"
        android:accessibilityHeading="true" />

    <TextView
        android:id="@+id/RadioGroupSub1Example1Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="start"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/text_RadioGroupSub1Example1Heading"
        android:accessibilityHeading="true"/>

    <TextView
        android:id="@+id/RadioGroupSub1Example1Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="start"
        android:textSize="14sp"
        android:layout_marginTop="0dp"
        android:text="@string/text_RadioGroupSub1Example1Intro"/>


    <TextView
        android:id="@+id/RadioGroupSub1Example1GroupLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="start"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:text="What's your favourite drink?"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/RadioGroupSub1Example1Radio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Coke Zero" />

        <RadioButton
            android:id="@+id/RadioGroupSub1Example1Radio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pepsi Max" />

        <RadioButton
            android:id="@+id/RadioGroupSub1Example1Radio3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rola Cola" />

    </RadioGroup>

    <Button android:id="@+id/buttonBackToFormControlsRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:onClick="moveBackFormControlsRadioGroup"
        android:text="@string/button_BackToFormControlsRadioGroup" />

    <Button android:id="@+id/buttonBackToMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:onClick="moveBackHome"
        android:text="@string/button_BackToMenu" />



</LinearLayout>




</ScrollView>